@@ -14,6 +14,7 @@ Change log next version
     String firstElement = jsonPath.getString("'some-list[0]'[0]"); // one
   which makes this an (unlikely but still) non-backward compatible change (issue 564).
 * Added support for multipart DELETE requests (issue 634)
+* It's now possible to use empty and whitespace path parameters (issue 631)
 
 Change log 2.8.0 (2015-12-18)
 -----------------------------
